# instrumentacion_virtual_fork

./: .gitignore  README.md  pyproject.toml  requirements.txt
InstVirtualLib/: generadores_arbitrarios.py  mediciones.py  operador.py  osciloscopios.py
PdfGen/: clases_funciones_.py  parametros.py  testeo.py
